# CoughOverflow

./: .gitignore  .terraform.lock.hcl  Dockerfile  Dockerfile-Engine  README.md  ai.md  deploy.sh  docker-compose.yml  launchapp.sh  local.sh  main.tf  pyproject.toml  refs.md  sqs.tf  wait-for-it.sh  worker.sh  worker.tf
app_cough/: __init__.py  main.py  utils.py
app_cough/Models/: __init__.py  crud.py  database.py  dbmodels.py  models.py  schemas.py  seed.py
app_cough/models/: __init__.py  crud.py  database.py  dbmodels.py  initdb.py  schemas.py  seed.py
app_cough/tasks/: analysis.py
app_cough/views/: analysisroute.py  healthroute.py  labroute.py  resultsroute.py  routes.py  worker.py
worker/: work.py
