[project]
name = "cough-overflow-api"
version = "0.1.0"
description = "Cough-Overflow API Development"
authors = [
    {name = "Tze Kheng Goh",email = "dgoh03625@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "boto3 (>=1.37.35,<2.0.0)",
    "watchtower (>=3.4.0,<4.0.0)",
    "celery[sqs] (>=5.5.2,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
